--- a/product/templates/index/index.html
+++ b/product/templates/index/index.html
@@ -7,8 +7,9 @@
         <div class="card">
             <img class="card-img-top" src="holder.js/100x180/" alt="">
             <div class="card-body">
-                <h4 class="card-title">Bienvenido</h4>
-                <p class="card-text">Al Sistema</p>
+                <h2 class="tituloBienvenida">Bienvenido</h2>
+                <br>
+                <h6 class="card-text"> Sistema de Gestión de Productos y Categorías</h6>
             </div>
         </div>
     </div>
