--- a/product/templates/index/base.html
+++ b/product/templates/index/base.html
@@ -6,38 +6,55 @@
     <title>MiniBlog de Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
     <style>
-        
         body {
             background-color: #484949; /* Cambia el color de fondo del cuerpo */
-            color: #343a40; /* Cambia el color del texto */
+            color: antiquewhite; /* Cambia el color del texto */
             padding-top: 150px; /* Agrega un relleno superior para evitar que el contenido se solape con la barra de navegación */
-        }
-        .navbar-brand {
-            font-size: 24px; /* Aumenta el tamaño de la fuente del enlace de la barra de navegación */
-        }
-        .container {
-            text-align: center; /* Centra el contenido del contenedor */
-        }
-        .button{
-            background-color: darkgoldenrod;
-            color: black
+        }  
+    
+        .card{
+            background-color: #484949;
+            border: none;          
 
         }
+
+        a {
+            text-decoration: none; /* Elimina el subrayado */
+            color: #FF5733; /* Cambia el color del texto */
+            
+        }
+
+        /* Cambiar color en hover */
+        a:hover {
+            color: #f2f3f2; /* Cambia el color del texto en hover */
+        }
+
+        .botonInicio{
+            margin-right: 30px;
+        }
+        .botonProductos{
+            margin-right: 30px;
+        }
+        
+        .nav{
+            margin-top: 40px
+        }
+        
+        
        
+
+
+
     </style>
 </head>
 <body> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Agrega la clase 'fixed-top' para que la barra de navegación se mantenga fija en la parte superior -->
-        <div class="container-fluid">
-           
-            <button class="btn " ><a class="navbar-brand" href="{% url 'index' %}">Inicio</a></button>
-
-            <button class="btn "> <a class="navbar-brand" href="{% url 'product_list' %}">Listado de Productos</a></button>
-           
-            <button class="btn "> <a class="navbar-brand" href="{% url 'category_list' %}">Listado de Categorias</a></button>
-            
-           
+    <nav class="nadvar bg-dark fixed-top"> 
+        <div class="container">           
+           <a class="botonInicio" href="{% url 'index' %}">INICIO</a>
+           <a class="botonProductos" href="{% url 'product_list' %}">PRODUCTOS</a>
+           <a class="botonCategorias" href="{% url 'category_list' %}">CATEGORIAS</a>         
         </div>
     </nav>
     <div class="container mt-5">
