--- a/product/templates/categories/create.html
+++ b/product/templates/categories/create.html
@@ -6,11 +6,10 @@
         {% csrf_token %}
         <div class="form-group">
             <label>Nombre</label>
-            <input type="text" name="name" class="form-control" required>
+            <input type="text" name="name" class=" mi-input form-control" required>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-danger">Guardar</button>
     </form>
 </div>
 {% endblock %}
-v
