--- a/product/templates/categories/update.html
+++ b/product/templates/categories/update.html
@@ -6,14 +6,14 @@
         {% csrf_token %}
         <div class="form-group">
             <label>Nombre</label>
-            <input type="text" name="name" class="form-control" value="{{ category.name }}" required>
+            <input type="text" name="name" class="mi-input form-control" value="{{ category.name }}" required>
             
         </div>
        <br>
        <div class="form-group">
         
         
-        <button type="submit" class="btn btn-primary">Actualizar</button>
+        <button type="submit" class="btn btn-danger">Confirmar</button>
     </form>
     
 </div>
