--- a/product/templates/categories/detail.html
+++ b/product/templates/categories/detail.html
@@ -1,15 +1,38 @@
 {% extends "index/base.html" %}
 {% block content %}
 <div class="container mt-3">
-    <h2>Detalles de Categoria</h2>
+    <h2>Detalles de la Categoria</h2>
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title"> {{category.name}}</h5>
-        
-            <a href="{% url 'category_update' category.id %}" class="btn btn-primary">Editar</a>
-            <a href="{% url 'category_delete' category.id %}" class="btn btn-danger">Borrar</a>
+            <h5 class="card-title">{{ category.name }}</h5>
+            <a href="#" class="btn btn-primary">Editar</a>
+            <a href="#" class="btn btn-danger">Borrar</a>
             <a href="{% url 'category_list' %}" class="btn btn-secondary">Volver a la lista</a>
         </div>
     </div>
+    <table class="table table-striped table-inverse table-responsive">
+        <thead class="thead-inverse">
+            <tr>
+                <th>Id Producto</th>
+                <th>Producto</th>
+                <th>Precio</th>
+            </tr>
+            </thead>
+            <tbody>
+                {% for product in products %}
+                    <tr>
+                        <td scope="row">{{product.id}}</td>
+                        <td>{{product.name}}</td>
+                        <td>{{product.price}}</td>
+                        <td>
+                            <a href="{% url 'product_detail' product.id %}" class="btn btn-info btn-sm">Detalles</a>
+                            <a href="{% url 'product_update' product.id %}" class="btn btn-success btn-sm">Editar</a>
+                            <a href="{% url 'product_delete' product.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+    </table>
 </div>
 {% endblock %}
+
