--- a/product/templates/categories/list.html
+++ b/product/templates/categories/list.html
@@ -1,9 +1,9 @@
-{% extends "index/base.html" %}
+{% extends 'index/base.html' %}
 
 {% block content %}
 <div class="container mt-3">
-    <h2>Lista de Categorías</h2>
-    <a href="{% url 'category_create' %}" class="btn btn-primary mb-3">Crear Categoría</a>
+    <h2>Lista de Categorias</h2>
+    <a href="{% url 'category_create' %}" class="btn btn-success mb-3">Crear Categoria</a>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -13,16 +13,18 @@
         </thead>
         <tbody>
             {% for category in categories %}
-            <tr>
-                <td>{{ category.name }}</td>
-                <td>
-                    <a href="{% url 'category_detail' category.id %}" class="btn btn-info btn-sm">Detalles</a> 
-                    <a href="{% url 'category_update' category.id %}" class="btn btn-success btn-sm">Editar</a>
-                    <a href="{% url 'category_delete' category.id %}" class="btn btn-danger btn-sm">Eliminar</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>{{ category.name }}</td>
+                    <td>
+                        <a href="{% url 'category_detail' category.id %}" class="btn btn-info btn-sm">Detalles</a>
+                        <a href="{% url 'category_update' category.id %}" class="btn btn-success btn-sm">Editar</a>
+                        <a href="{% url 'category_delete' category.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                    </td>
+                </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
 {% endblock %}
+ 
+ 
