--- a/product/templates/products/update.html
+++ b/product/templates/products/update.html
@@ -6,19 +6,19 @@
         {% csrf_token %}
         <div class="form-group">
             <label>Nombre</label>
-            <input type="text" name="name" class="form-control" value="{{ product.name }}" required>
+            <input type="text" name="name" class="mi-input form-control" value="{{ product.name }}" required>
         </div>
         <div class="form-group">
             <label>Descripción</label>
-            <textarea name="description" class="form-control" value="{{ product.description }}">{{ product.description }}</textarea>
+            <textarea name="description" class="mi-input form-control" value="{{ product.description }}">{{ product.description }}</textarea>
         </div>
         <div class="form-group">
             <label>Precio</label>
-            <input type="number" step="0.01" name="price" class="form-control" value="{{ product.price }}" required>
+            <input type="number" step="0.01" name="price" class="mi-input form-control" value="{{ product.price }}" required>
         </div>
         <div class="form-group">
             <label>Categoría</label>
-            <select name="id_category" class="form-control">
+            <select name="id_category" class="mi-input form-control">
                 {% for category in categories %}
                     <option value="{{ category.id }}" {% if category.id == product.category.id %} selected {% endif %}>
                         {{ category.name }}
@@ -28,9 +28,10 @@
         </div>
         <div class="form-group">
             <label>Stock</label>
-            <input type="number" name="stock" class="form-control" value="{{ product.stock }}">
+            <input type="number" name="stock" class="mi-input form-control" value="{{ product.stock }}">
         </div>
-        <button type="submit" class="btn btn-primary">Actualizar</button>
+        <br>
+        <button type="submit" class="btn btn-danger">Confirmar</button>
     </form>
 </div>
 {% endblock %}
