--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -11,7 +11,6 @@
         body {
             background-image: url('');
             background-color: #484949; /* Cambia el color de fondo del cuerpo */
-<<<<<<< HEAD
             color: rgb(228, 199, 161); /* Cambia el color del texto */
             padding-top: 50px; /* Agrega un relleno superior para evitar que el contenido se solape con la barra de navegación */
         }  
@@ -21,18 +20,17 @@
             border-radius: 5px;  
             border-color: #2c2b2b;        
             padding-bottom: 15px;
-            border-width: 5px;          
-                        
-        }
-=======
+            border-width: 5px;   
             color: antiquewhite; /* Cambia el color del texto */
             padding-top: 150px; /* Agrega un relleno superior para evitar que el contenido se solape con la barra de navegación */
-        }  
+        }                        
+                 
     
         .card{
             background-color: #484949;
             border: none;          
->>>>>>> 7ec27941f5735c7df2bd0baf4236194eeb8f507e
+        }
+
 
         a {
             text-decoration: none; /* Elimina el subrayado */
@@ -40,15 +38,6 @@
             
         }
 
-<<<<<<< HEAD
-=======
-        a {
-            text-decoration: none; /* Elimina el subrayado */
-            color: #FF5733; /* Cambia el color del texto */
-            
-        }
-
->>>>>>> 7ec27941f5735c7df2bd0baf4236194eeb8f507e
         /* Cambiar color en hover */
         a:hover {
             color: #f2f3f2; /* Cambia el color del texto en hover */
@@ -59,7 +48,7 @@
         }
         .botonProductos{
             margin-right: 30px;
-<<<<<<< HEAD
+
         }
 
         .mi-input{
@@ -70,10 +59,8 @@
         } 
         .labelControlStock{
             color: #d4d0d0;
-        }  
-                  
+        }                  
        
-
     </style>
 </head>
 
@@ -83,9 +70,11 @@
       
     <nav class="navbar navbar-expand-lg navbar-dark   ">
         <a class="navbar-brand" href="{% url 'index' %}">INICIO</a>
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item active">
@@ -100,23 +89,19 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'supplier_list' %}">PROVEEDORES</a>
+            </li>   
             </li>
-            
-=======
-        }     
-      
+                {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %}" class="btn btn-danger ">Salir</a>
+                {% else %}
+                    <a href="{% url 'login' %}" class="btn btn-success">Ingresar</a>
+                {% endif %}         
+            </li>  
+        </div>     
+        
              
-    </style>
-</head>
-<body> 
-    <nav class="nadvar bg-dark fixed-top"> 
-        <div class="container">           
-           <a class="botonInicio" href="{% url 'index' %}">INICIO</a>
-           <a class="botonProductos" href="{% url 'product_list' %}">PRODUCTOS</a>
-           <a class="botonCategorias" href="{% url 'category_list' %}">CATEGORIAS</a>         
->>>>>>> 7ec27941f5735c7df2bd0baf4236194eeb8f507e
-        </div>
     </nav>
+
     
     <div class="container mt-5">
         {% block content %}
