--- a/product/templates/products/list.html
+++ b/product/templates/products/list.html
@@ -1,4 +1,4 @@
-{% extends "index/base.html" %}
+{% extends "home/base.html" %}
 {% block content %}
 
 <style>
@@ -59,8 +59,10 @@
                 <td>{{ product.stock }}</td>
                 <td>
                     <a href="{% url 'product_detail' product.id %}" class="btn btn-info btn-sm">Detalles</a>
+                    {% if user.is_authenticated %}
                     <a href="{% url 'product_update' product.id %}" class="btn btn-success btn-sm">Editar</a>
                     <a href="{% url 'product_delete' product.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                {% endif %}
                 </td>
             </tr>
             {% empty %}
