--- a/product/templates/supplier/list.html
+++ b/product/templates/supplier/list.html
@@ -1,4 +1,4 @@
-{% extends "index/base.html" %}
+{% extends "home/base.html" %}
 {% block content %}
 <div class="container mt-3">
     <h2>Lista de Proveedores</h2>
@@ -20,8 +20,10 @@
                 <td>{{ supplier.phone }}</td>
                 <td>
                     <a href="{% url 'supplier_detail' supplier.id %}" class="btn btn-info btn-sm">Detalles</a>
+                    {% if user.is_authenticated %}
                     <a href="{% url 'supplier_update' supplier.id %}" class="btn btn-success btn-sm">Editar</a>
                     <a href="{% url 'supplier_delete' supplier.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                {% endif %}
                 </td>
             </tr>
             {% empty %}
